# Insect-Observer

./: README.md
Software/Gazebo simulation/Insect_Watcher/: package.xml
Software/Gazebo simulation/Insect_Watcher/launch/: display.launch
Software/Gazebo simulation/Insect_Watcher/meshes/: camera_link.STL  xlider_link.STL
Software/Gazebo simulation/Insect_Watcher/urdf/: Insect_Watcher.csv  Insect_Watcher.urdf
Software/Gazebo simulation/iw_sim/config/: urdf.rviz
Software/Gazebo simulation/iw_sim/launch/: iw_controller.launch  simulation.launch
Software/Gazebo simulation/iw_sim/scripts/: state_pub.py
Software/Gazebo仿真/Insect_Watcher/: CMakeLists.txt
Software/Gazebo仿真/Insect_Watcher/config/: joint_names_Insect_Watcher.yaml
Software/Gazebo仿真/Insect_Watcher/launch/: gazebo.launch
Software/Gazebo仿真/Insect_Watcher/meshes/: base_link.STL  yslider_link.STL
Software/Gazebo仿真/Insect_Watcher/urdf/: Insect_Watcher.xacro
Software/Gazebo仿真/iw_sim/: CMakeLists.txt  package.xml
SolidWorks Model/: 1720角件.SLDPRT  28stepMotor.SLDPRT  Insect_Watcher.SLDASM  aluminum_bar_20x190.SLDPRT  aluminum_bar_20x20.SLDPRT  aluminum_bar_20x200.SLDPRT  aluminum_bar_20x235.SLDPRT  aluminum_bar_20x280.SLDPRT  aluminum_bar_20x50.SLDPRT  buttom_box.SLDPRT  camera.SLDPRT  drawer.SLDPRT  guide_screw.SLDPRT  rail.SLDPRT  shell board.SLDPRT  shell board_back.SLDPRT  shell board_front.SLDPRT  slider.SLDPRT  topboard.SLDPRT  ~$aluminum_bar_20x190.SLDPRT
Structure/: Insect_Watcher.SLDASM  aluminum_bar_270mm.SLDPRT  camera.SLDPRT  topboard.SLDPRT
(+12 files in other folders)
